--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     }
 
     .first {
-        background-color: rgb(170, 236, 251, .1);
-        border: 1px solid rgb(170, 236, 251);
+        background-color: rgb(170, 236, 251, .05);
+        border: 1px solid rgb(170, 236, 251, .3);
         padding: 40px;
     }
 
@@ -42,10 +42,17 @@
         border: .5px solid rgb(118, 179, 193);
     }
 
-    div img {
+    div img, #artist_pop {
         margin: auto;
         display: block;
     }
+
+    div h2 {
+        text-align: center;
+        margin-bottom: 50;
+    }
+
+
 
 
     </style>
@@ -59,6 +66,8 @@
     <h3>Sydney Bednar, Noorejehan Umar, Victoria Eshun</h3>
 <div class="im-cover">
     <img src='title.png'/>
+    <h2>What is the relationship between music features and song
+    popularity on TikTok?</h2>
 </div>
 <div class="first">
     <div class="top row">
@@ -89,9 +98,15 @@
     </svg>
 </div>
 
-</br>
-<svg id="artist_pop" width=500 height=500>
-</svg>
+</div>
+<div class="im-cover">
+<img src='title3.png'/>
+</div>
+
+<div class="first">
+    <svg id="artist_pop" width=800 height=800>
+    </svg>
+</div>
     </p>
 
     <script>
@@ -101,22 +116,22 @@
 
 
         const svg1=d3.select("svg#dance")
-        const width = svg1.attr("width");
-        const height = svg1.attr("height");
-        var margin = {top: 50, right: 10, bottom: 50, left: 50};
-        const chartWidth = width - margin.left - margin.right;
-        const chartHeight = height - margin.top - margin.bottom;
+        var width = svg1.attr("width");
+        var height = svg1.attr("height");
+        var margin = {top: 50, right: 10, bottom: 70, left: 50};
+        var chartWidth = width - margin.left - margin.right;
+        var chartHeight = height - margin.top - margin.bottom;
 
         let annotations = svg1.append("g").attr("id","annotations");
         let chartArea = svg1.append("g").attr("id","points")
                         .attr("transform",`translate(${margin.left},${margin.top})`);
 
         const popExtent = d3.extent(data, d => d['track_pop'])
-        const popScale = d3.scaleLinear()
+        var popScale = d3.scaleLinear()
                             .domain(popExtent)
                             .range([0, chartWidth])
 
-        let bottomAxis = d3.axisBottom(popScale)
+        var bottomAxis = d3.axisBottom(popScale)
 
         annotations.append("g")
                    .attr("class", "x axis")
@@ -192,6 +207,13 @@
                    .attr("class", "x axis")
                    .attr("transform",`translate(${margin.left},${chartHeight+margin.top+10})`)
                    .call(bottomAxis)
+
+        annotations3.append("text")
+                  .attr("class", "x label")
+                  .attr("transform",`translate(${margin.left+chartWidth/2},${chartHeight+margin.top+margin.bottom-20})`)
+                  .attr("text-anchor", "middle")
+                  .attr("dominant-baseline", "middle")
+                  .text("Track Popularity")
 
 
         const energyExtent = d3.extent(data, d => d['energy']);
@@ -323,6 +345,13 @@
                 .attr("transform",`translate(${margin.left-10},${margin.top})`)
                 .call(acousticnessAxis);
 
+        annotations6.append("text")
+                  .attr("class", "x label")
+                  .attr("transform",`translate(${margin.left+chartWidth/2},${chartHeight+margin.top+margin.bottom-20})`)
+                  .attr("text-anchor", "middle")
+                  .attr("dominant-baseline", "middle")
+                  .text("Track Popularity")
+
         let acousticnessCircles = chartArea6.selectAll("circles.acousticness").data(data)
                             .join("circle")
                             .attr("class", "acousticness")
@@ -342,6 +371,7 @@
                     .style("font-size", "16px")
                     .text("Acousticness");
 
+
         var linearRegression = ss.linearRegression(data.map(d => [d.track_pop, d.acousticness]))
         var linearRegressionLine = ss.linearRegressionLine(linearRegression)
 
@@ -360,10 +390,22 @@
 
         // track popularity against artist popularity
         const svg7 = d3.select("svg#artist_pop")
+        var width = svg7.attr("width");
+        var height = svg7.attr("height");
+        var margin = {top: 50, right: 10, bottom: 70, left: 50};
+        var chartWidth = width - margin.left - margin.right;
+        var chartHeight = height - margin.top - margin.bottom;
 
         let annotations7 = svg7.append("g").attr("id","annotations7");
         let chartArea7 = svg7.append("g").attr("id","points7")
                         .attr("transform",`translate(${margin.left},${margin.top})`);
+
+
+        var popScale = d3.scaleLinear()
+                            .domain(popExtent)
+                            .range([0, chartWidth])
+
+        var bottomAxis = d3.axisBottom(popScale)
 
         annotations7.append("g")
                    .attr("class", "x axis")
@@ -407,6 +449,21 @@
         .attr("text-anchor", "middle")
         .style("font-size", "16px")
         .text("Track Popularity");
+
+        var linearRegression = ss.linearRegression(data.map(d => [d.track_pop, d.artist_pop]))
+        var linearRegressionLine = ss.linearRegressionLine(linearRegression)
+
+        var lineGen = d3.line()
+                 .x(d => popScale(d.x))
+                 .y(d => artist_popScale(d.y))
+
+
+        chartArea7.append('path')
+                 .datum(regressionPoints())
+                 .attr('class', 'line')
+                 .attr('stroke', '#397684')
+                 .attr('stroke-width', 3)
+                 .attr('d', lineGen);
 
 
         // Combined chart
