--- a/index.html
+++ b/index.html
@@ -45,15 +45,14 @@
     div img, #artist_pop {
         margin: auto;
         display: block;
+        margin-top: 30px;
     }
 
-    div h2 {
+    .im-cover h2{
         text-align: center;
-        margin-bottom: 50;
+        margin-left: 30px;
+        margin-right: 30px;
     }
-
-
-
 
     </style>
     <script src="https://d3js.org/d3.v7.min.js"></script>
@@ -65,9 +64,11 @@
     <h1>Project 1</h1>
     <h3>Sydney Bednar, Noorejehan Umar, Victoria Eshun</h3>
 <div class="im-cover">
-    <img src='title.png'/>
-    <h2>What is the relationship between music features and song
-    popularity on TikTok?</h2>
+    <img src='title1.png'/>
+    <h2>How do music features relate to track popularity? In this
+    chart, we examine 4 features, danceability, valence, energy,
+    and acousticness against track popularity see which of these
+    features are most informative...</h2>
 </div>
 <div class="first">
     <div class="top row">
