--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
         margin-bottom: 30px;
     }
 
+    #combo {
+        display: block;
+        margin: auto;
+    }
+
     </style>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <!--Source: susielu color legend https://d3-legend.susielu.com/ -->
